--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,79 +1,66 @@
-name: Bug
-description: Report a problem or unexpected behavior in the Gardens app.
-title: ""
-issue-type: bug
+name: Bug Report
+description: File a bug report.
+title: "[Bug]: "
+labels: ["bug", "triage"]
+projects: ["1Hive/20"]
+assignees:
+  - Corantin
+  - Mati0x
+  - Oba-One
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for reporting an issue. Please provide as much detail as possible so we can reproduce and fix the problem quickly.
+        Thanks for taking the time to fill out this bug report!
   - type: input
-    id: summary
+    id: contact
     attributes:
-      label: Summary
-      description: Briefly describe the bug.
-      placeholder: Transaction fails when signing proposal
-    validations:
-      required: true
-  - type: textarea
-    id: steps-to-reproduce
-    attributes:
-      label: Steps to reproduce
-      description: List each step needed to reproduce the issue.
-      placeholder: |
-        1. Go to ...
-        2. Click ...
-        3. See error ...
-    validations:
-      required: true
-  - type: textarea
-    id: expected-behavior
-    attributes:
-      label: Expected behavior
-      description: What did you expect to happen?
-    validations:
-      required: true
-  - type: textarea
-    id: actual-behavior
-    attributes:
-      label: Actual behavior
-      description: What actually happened? Include full error messages when possible.
-    validations:
-      required: true
-  - type: textarea
-    id: environment
-    attributes:
-      label: Environment
-      description: Provide details about where this occurred.
-      placeholder: |
-        - App version / commit: ...
-        - Browser or device: ...
-        - Network / chain: ...
-        - Wallet: ...
+      label: Contact Details
+      description: How can we get in touch with you if we need more info?
+      placeholder: ex. email@example.com
     validations:
       required: false
   - type: textarea
-    id: additional-context
+    id: what-happened
     attributes:
-      label: Additional context
-      description: Logs, screenshots, or any extra information that will help us investigate.
+      label: What happened?
+      description: Also tell us, what did you expect to happen?
+      placeholder: Tell us what you see!
+      value: "A bug happened!"
     validations:
-      required: false
-  - type: checkboxes
-    id: focus-areas
+      required: true
+  - type: dropdown
+    id: version
     attributes:
-      label: Focus areas
-      description: Select the relevant work areas.
+      label: Version
+      description: What version of our software are you running?
       options:
-        - label: "🎨 frontend"
-        - label: "🔗 subgraph"
-        - label: "🔧 contracts"
-        - label: "👩‍🎨 design"
-        - label: "🧪 tests"
-  - type: markdown
+        - 1.0.2 (Default)
+        - 1.0.3 (Edge)
+      default: 0
+    validations:
+      required: true
+  - type: dropdown
+    id: browsers
     attributes:
-      value: |
-        **Reference links**
-
-        - Figma: https://www.figma.com/design/v9ECAmLYs2pam1wguh3HUS/Gardens-V2-UI?node-id=1-25&t=HMdvUpdbEzxPdDPZ-1
-        - GitHub repository: https://github.com/1Hive/gardens-v2
+      label: What browsers are you seeing the problem on?
+      multiple: true
+      options:
+        - Firefox
+        - Chrome
+        - Safari
+        - Microsoft Edge
+  - type: textarea
+    id: logs
+    attributes:
+      label: Relevant log output
+      description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+      render: shell
+  - type: checkboxes
+    id: terms
+    attributes:
+      label: Code of Conduct
+      description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com).
+      options:
+        - label: I agree to follow this project's Code of Conduct
+          required: true
