--- a/.github/ISSUE_TEMPLATE/qa.yml
+++ b/.github/ISSUE_TEMPLATE/qa.yml
@@ -1,22 +1,25 @@
 name: QA request
 description: Request quality assurance coverage for a change or release.
-title: "[QA]: "
-labels:
-  - sanity
-issue-type: qa
+title: ""
+labels: ["sanity"]
+type: "Task"
 body:
   - type: markdown
     attributes:
       value: |
         Share the scope, target environment, and risk areas so QA can validate the change efficiently.
-  - type: input
-    id: contact
+  - type: checkboxes
+    id: test-types
     attributes:
-      label: Requester
-      description: Who should QA contact for questions?
-      placeholder: Name or Slack handle
-    validations:
-      required: true
+      label: Test types requested
+      description: Select all QA activities needed.
+      options:
+        - label: Regression
+        - label: Smoke / sanity
+        - label: Exploratory
+        - label: Performance
+        - label: Security
+        - label: UAT coordination
   - type: textarea
     id: scope
     attributes:
@@ -50,11 +53,25 @@ body:
     validations:
       required: false
   - type: textarea
+    id: entry-criteria
+    attributes:
+      label: Entry criteria
+      description: Preconditions QA should confirm before starting (build status, configs, flags).
+    validations:
+      required: false
+  - type: textarea
+    id: exit-criteria
+    attributes:
+      label: Exit criteria
+      description: Define what sign-off looks like (checklists, approvals, monitoring).
+    validations:
+      required: false
+  - type: textarea
     id: artifacts
     attributes:
       label: Supporting artifacts
       description: Link related PRs, designs, logs, or monitoring dashboards.
-      placeholder: Related PR: ...
+      placeholder: "Related PR(s): ..."
     validations:
       required: false
   - type: markdown
