Remove Bug: prefix

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,6 +1,6 @@
 name: Bug report
 description: Report a problem or unexpected behavior in the Gardens app.
-title: "[Bug]: "
+title: ""
 labels: ["triage"]
 type: "Bug"
 projects: ["1Hive/20", "1Hive/17"]
