Move doc to docs

--- a/turbo.json
+++ b/turbo.json
@@ -97,7 +97,7 @@
         "foundry#build"
       ]
     },
-    "gardens-docs#build": {
+    "docs#build": {
       "dependsOn": [
         "^build"
       ],
