--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -11,12 +11,13 @@
     "import": "python ./scripts/import_gitbook.py"
   },
   "dependencies": {
+    "@inkeep/cxkit-react": "^0.5.100",
     "next": "^14.2.5",
     "nextra": "^3.2.3",
     "nextra-theme-docs": "^3.2.3",
-    "zod": "^3.25.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.25.3"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
