Refactor CVStrategy and RegistryCommunity contracts to use CommunityBaseFacet for storage alignment
- Updated CVStrategyV0_0 to replace direct storage inheritance with CommunityBaseFacet.
- Refactored CVAdminFacet, CVAllocationFacet, CVDisputeFacet, CVPowerFacet, CVProposalFacet to inherit from CommunityBaseFacet.
- Introduced CommunityBaseFacet to centralize storage layout and constants for RegistryCommunity facets.
- Removed redundant storage declarations in individual facets, ensuring they inherit from CommunityBaseFacet.
- Ensured consistent use of NATIVE_TOKEN across CVStrategy facets for native token handling.
- Cleaned up unused modifiers and functions across various facets to streamline contract logic.

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -7,8 +7,20 @@ include .env
 # create RPC_URL_LOCALHOST variable
 RPC_URL_LOCALHOST = http://127.0.0.1:8545
 # print RPC_URL
-print : 
+print :
 	@echo $(RPC_URL)
+
+# Verify diamond storage layouts (with build)
+verify-storage:
+	@echo "🔍 Verifying diamond storage layouts..."
+	@./scripts/verify-storage-layout.sh || (echo "❌ Storage verification FAILED! Fix storage alignment before deploying." && exit 1)
+	@echo "✅ Storage verification passed"
+
+# Verify diamond storage layouts (skip build - faster, assumes already compiled)
+verify-storage-quick:
+	@echo "🔍 Verifying diamond storage layouts (quick mode)..."
+	@./scripts/verify-storage-layout.sh --skip-build || (echo "❌ Storage verification FAILED! Fix storage alignment before deploying." && exit 1)
+	@echo "✅ Storage verification passed"
 
 ### LOCLAHOST ###
 
