Enhance storage layout verification and update contracts
- Improved the storage layout verification script to handle variable names with alphanumeric characters, ensuring better compatibility.
- Added detailed output for storage layout mismatches, highlighting differences between main and facet contracts for easier debugging.
- Introduced a new function in CVStrategyV0_0 to delegate calls to the cancelProposal function in the ProposalManagementFacet.
- Added an empty line in CVStrategyBaseFacet to maintain consistent formatting and readability.

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -22,6 +22,12 @@ verify-storage-quick:
 	@./scripts/verify-storage-layout.sh --skip-build || (echo "❌ Storage verification FAILED! Fix storage alignment before deploying." && exit 1)
 	@echo "✅ Storage verification passed"
 
+# Verify diamond storage layouts with verbose output (shows detailed differences)
+verify-storage-verbose:
+	@echo "🔍 Verifying diamond storage layouts (verbose mode)..."
+	@./scripts/verify-storage-layout.sh --verbose || (echo "❌ Storage verification FAILED! Fix storage alignment before deploying." && exit 1)
+	@echo "✅ Storage verification passed"
+
 ### LOCLAHOST ###
 
 fork:
